configure add-exports and add-opens for linux